<resources>
    <string name="default_web_client_id">567380181891-m15oj8u4r88c659n2lmmuu2tdjlcoh97.apps.googleusercontent.com</string>

    <string name="app_name">LogiTrack Android</string>
    <string name="logitrak">LogiTrak - Your Logistic Deliver Partner</string>
    <string name="developed_by_techdilation">Developed by - TechDilation</string>

    <string name="home">Home</string>
    <string name="product">Product</string>
    <string name="Add"> </string>
    <string name="order">Order</string>
    <string name="profile">Profile</string>
    <string name="login_button">Login</string>
    <string name="new_user">New user? Register Now</string>
    <string name="password">password</string>
    <string name="register">Create Account</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="already_have_an_account">Already have an Account?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="Pending_order_fragment">Pending order fragment</string>
    <string name="your_tracking_partner">Your Tracking Partner</string>
    <string name="track">Track</string>
    <string name="map_content_description">Map view for tracking</string>
    <string name="live_location_description">this is live location\n</string>
    <string name="current_location_description">for current location</string>
    <string name="pending_order">Pending Order</string>
    <string name="complete_order">Complete Order</string>
    <string name="view_pager_content_description">view pager description \n</string>
    <string name="tab_layout_content_description">Description of your TabLayout</string>
    <string name="order_id">Order ID:</string>
    <string name="order_number">782391</string>
    <string name="order_completed_successfully">Order Completed Successfully</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>